# anime-recommender

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
src/: config.py  jikan.py  main.py  models.py  recommender.py  tmdb.py
static/: index.html
tests/: conftest.py  test_jikan.py  test_recommender.py  test_tmdb.py
